Fixed spacing on nav bar anchors. Define a function that takes a single movie review object and returns a DOM tree that matches one of the example reviews in the HTML.

--- a/css/layout.css
+++ b/css/layout.css
@@ -17,6 +17,11 @@
   flex-wrap: wrap;
 }
 
+.row-no-wrap {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .column-full,
 .column-half,
 .column-third,
@@ -44,7 +49,11 @@
     width: 40%;
   }
 
-  .column-48 {
+  .column-third-nav {
+    width: 40%;
+  }
+
+  .column-half-review {
     width: 48.5%;
   }
 
@@ -53,6 +62,10 @@
   }
 
   .column-two-third {
+    width: 60%;
+  }
+
+  .column-two-third-nav {
     width: 60%;
   }
 }
